# url_data_extractor

./: LICENSE  README.md  extractor-test.py  pyproject.toml
myproject/: list  main  python  task-definition-files
src/url_data_extractor/: _url_utils.py  data_extractors.py  exceptions.py  matchers.py
