[project]
name = "url-data-extractor"
version = "0.1.0"
description = "URL Matching and Data Extraction Utilities"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Travis B. Hartwell", email = "nafai@travishartwell.net" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.14"
pretty = true
strict = true
